Changing title of of the projec
Changing title of of the project

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           </a>
         </div>
         <div class="project-card">
-          <h3>Housing Market Analysis</h3>
+          <h3>Automating Crypto Website</h3>
           <p style="margin: 2rem 0">
             Automates the extraction of data from APIs and appends it to
             existing datasets, improving efficiency in data management. It
